# Avim

./: .gitignore  Cargo.toml  README.md  debug_test.txt  test_features.py  test_python.py  test_rust.rs  test_smart_features.py
Avim/: BUILD.md  LICENSE  README.md  STATUS.md  USAGE.md  test.txt
Avim/src/: lib.rs  main.rs
Avim/src/buffer/: line.rs  mod.rs
Avim/src/command/: executor.rs  mod.rs
Avim/src/editor/: mod.rs
Avim/src/input/: keymap.rs
Avim/src/mode/: mod.rs  normal.rs
Avim/src/search/: mod.rs
Avim/src/syntax/: highlighter.rs
Avim/src/ui/: renderer.rs
src/: lib.rs
src/buffer/: gap_buffer.rs  mod.rs
src/command/: executor.rs
src/config/: mod.rs
src/cursor/: mod.rs
src/editor/: mod.rs  state.rs
src/input/: keymap.rs  mod.rs
src/mode/: command.rs  insert.rs  normal.rs  visual.rs
src/syntax/: highlighter.rs  mod.rs
src/ui/: mod.rs  renderer.rs  statusline.rs
src/window/: manager.rs  mod.rs  split.rs
