[package]
name = "avim"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27"
unicode-segmentation = "1.10"
ropey = "1.6"
syntect = "5.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[lib]
name = "avim"
path = "src/lib.rs"

[[bin]]
name = "avim"
path = "src/main.rs"

